Update base URL in index.html

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horaires Jean-Monnet</title>
   <link id="themeStylesheet" rel="stylesheet" href="style.css">
-  <base href="https://school-toolsl.github.io/horaires-lycee/">
+  <base href="https://school-toolsl.github.io/horaires-lycee/pages/principal/">
 </head>
 
 <body>
