Change menu icon in index.html

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -27,7 +27,7 @@
   </div>
   <div id="upbar">
     <div id="menu" style="cursor:pointer;">
-      <img src="menuClair.svg" alt="mode clair" id="iconM">
+      <img src="menu.svg" alt="mode clair" id="iconM">
     </div>
     <div id="title">
       <h1>&lt;School-Tools&gt;</h1>
