Add base URL and stylesheet link to index.html

--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Qui Sommes Nous ?</title>
+    <base href:"https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Qui Sommes Nous ?</h1>
