--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -1,9 +1,9 @@
-<DOCTYPE html>
+<!DOCTYPE html>
   <html lang="fr">
   <head>
     <meta charset="utf-8">
     <title>Qui Sommes Nous ?</title>
-    <base href:"https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
+    <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
