Update QSN link to new URL

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -33,7 +33,7 @@
       <h1>&lt;School-Tools&gt;</h1>
     </div>
     <div id="QSN">
-    <a href="https://school-toolsl.github.io/horaires-lycee/QSN.html">
+    <a href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/index.html">
       <h1>
         Qui Sommes-Nous ?
       </h1>
