--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -7,39 +7,41 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Qui Sommes Nous ?</h1>
-    <div id="text1">
-      <p>
-        School-tools est un réseau de sites codés par un élève du lycée Jean-Monnet pour les élèves du lycée Jean-Monnet regroupant un système de décompte pour l'ouverture et la fermeture du portail du lycée ainsi que les horaires des sonneries, des récrés, un outil de gestion de tâches sous forme de to-do-list dynamique et bien d'autre encore...
-      </p>
-    </div>
-    <div id="text2">
-      <p>
-        La totalité des sites du réseau school-tools ont étés conçus sur téléphone et pour téléphone mais fonctionnent parfaitement sur tout type d'appareils même si l'affichage pourrait ne pas se faire correctement sur tous les appareils.<br>Une nouvelle version optimisée pour les ordinateurs devrait sortir fin octobre.
-      </p>
-    </div>
-    <div id="credits">
-      <p>
-        Credits:
-      </p>
-      <ul>
-        <li>
-          Apprentissage code: Enki
-        </li>
-        <li>
-          Débogage: Chat GPT, Copilot
-        </li>
-        <li>
-          hébergement: Github Pages
-        </li>
-        <li>
-          Codage: CodePen, VSCode
-        </li>
-        <li>
-          Ambiance Dev: Youtube Music
-        </li>
-      </ul>
-    </div>
+    <main>
+      <h1>Qui Sommes Nous ?</h1>
+      <div id="text1">
+        <p>
+          School-tools est un réseau de sites codés par un élève du lycée Jean-Monnet pour les élèves du lycée Jean-Monnet regroupant un système de décompte pour l'ouverture et la fermeture du portail du lycée ainsi que les horaires des sonneries, des récrés, un outil de gestion de tâches sous forme de to-do-list dynamique et bien d'autre encore...
+        </p>
+      </div>
+      <div id="text2">
+        <p>
+          La totalité des sites du réseau school-tools ont étés conçus sur téléphone et pour téléphone mais fonctionnent parfaitement sur tout type d'appareils même si l'affichage pourrait ne pas se faire correctement sur tous les appareils.<br>Une nouvelle version optimisée pour les ordinateurs devrait sortir fin octobre.
+        </p>
+      </div>
+      <div id="credits">
+        <p>
+          Credits:
+        </p>
+       <ul>
+          <li>
+            Apprentissage code: Enki
+          </li>
+          <li>
+            Débogage: Chat GPT, Copilot
+          </li>
+          <li>
+            hébergement: Github Pages
+          </li>
+          <li>
+            Codage: CodePen, VSCode
+          </li>
+          <li>
+            Ambiance Dev: Youtube Music
+          </li>
+        </ul>
+      </div>
+    </main>
     <footer>
       <p>
          N'hesitez pas à <a id="link" href="#">partager ce site</a> ou à le recommander à vos amis<br>Une nouvelle version PC arrive prochinement avec pleins d'autres fonctionalitées !!
