--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -2,6 +2,7 @@
   <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui Sommes Nous ?</title>
     <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
     <link rel="stylesheet" href="style.css">
