--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horaires Jean-Monnet</title>
   <link id="themeStylesheet" rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/favicon.ico">
+  <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/icons/SCHOOL_TOOLS.png">
   <base href="https://school-toolsl.github.io/horaires-lycee/pages/principal/">
 </head>
 
