Update favicon link to SCHOOL_TOOLS icon

--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui Sommes Nous ?</title>
     <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
-    <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/favicon.ico">
+    <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/icons/SCHOOL_TOOLS.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
