--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <div id="upbar">
+    <div id="menu" style="cursor:pointer;">
+      <img src="https://school-toolsl.github.io/horaires-lycee/icons/menu.svg" alt="mode clair" id="iconM">
+    </div>
+    <div id="title">
+      <h1>&lt;School-Tools&gt;</h1>
+    </div>
+    <div id="QSN">
+    <a href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/index.html">
+      <h1>
+        Qui Sommes-Nous ?
+      </h1>
+    </a>  
+    </div>
+    <div id="divIcon" style="cursor:pointer;">
+      <img src="https://school-toolsl.github.io/horaires-lycee/icons/White-icon.svg" alt="mode clair" id="icon">
+    </div>
+  </div>
+    </header>
     <main>
       <h1>Qui Sommes Nous ?</h1>
       <div id="text1">
