--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="screenSize">
+    <p id="oups">
+      Oups !
+    </p>
+    <p>
+      La largeur de votre écran est trop faible et ne peut pas supporter ce site, changez d'appareil pour accéder aux fonctionalitées du site.
+    </p>
+  </div>
     <header>
       <div id="upbar">
     <div id="menu" style="cursor:pointer;">
