--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -6,7 +6,7 @@
     <title>Qui Sommes Nous ?</title>
     <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
     <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/icons/SCHOOL_TOOLS..png">
-    <link rel="stylesheet" href="style.css">
+    <link id="themeStylesheet" rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="screenSize">
