--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -31,7 +31,9 @@
       <img src="https://school-toolsl.github.io/horaires-lycee/icons/menu.svg" alt="mode clair" id="iconM">
     </div>
     <div id="title">
-      <h1>&lt;School-Tools&gt;</h1>
+      <a href="https://school-toolsl.github.io/horaires-lycee/pages/principal/index.html">
+        <h1>&lt;School-Tools&gt;</h1>
+      </a>
     </div>
     <div id="divIcon" style="cursor:pointer;">
       <img src="https://school-toolsl.github.io/horaires-lycee/icons/White-icon.svg" alt="mode clair" id="icon">
