--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui Sommes Nous ?</title>
-    <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/">
+    <base href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/" target="_self">
     <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/icons/SCHOOL_TOOLS..png">
     <link id="themeStylesheet" rel="stylesheet" href="style.css">
   </head>
