--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -7,7 +7,7 @@
   <title>Horaires Jean-Monnet</title>
   <link id="themeStylesheet" rel="stylesheet" href="style.css">
   <link rel="icon" href="https://school-toolsl.github.io/horaires-lycee/icons/SCHOOL_TOOLS..png">
-  <base href="https://school-toolsl.github.io/horaires-lycee/pages/principal/">
+  <base href="https://school-toolsl.github.io/horaires-lycee/pages/principal/" target="_self">
 </head>
 
 <body>
