--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -11,88 +11,93 @@
 </head>
 
 <body>
-  <aside>
-    <nav>
-      <div class="horloge">
-        <h2>Heure actuelle</h2>
-        <p id="clock">--:--:--</p>
-      </div>
-      <ul>
-        <li>Qui Sommes Nous</li>
-        <li>To-Do List</li>
-        <li>Extension productivité</li>
-      </ul>
-      <p>v1.2.63</p>
-    </nav>
-  </aside>
-  <div id="disclaimer">
-    <p>
-      Vous êtes hors connexion !
-      <br>
-      Les informations peuvent ne pas être à jour
-    </p>
-  </div>
-  <div id="screenSize">
-    <p id="oups">
-      Oups !
-    </p>
-    <p>
-      La largeur de votre écran est trop faible et ne peut pas supporter ce site, changez d'appareil pour accéder aux fonctionalitées du site.
-    </p>
-  </div>
-  <div id="upbar">
-    <div id="menu" style="cursor:pointer;">
-      <img src="https://school-toolsl.github.io/horaires-lycee/icons/menu.svg" alt="mode clair" id="iconM">
+  <div id="upfunct">
+    <div id="disclaimer">
+      <p>
+        Vous êtes hors connexion !
+        <br>
+        Les informations peuvent ne pas être à jour
+      </p>
     </div>
-    <div id="title">
-      <a href="https://school-toolsl.github.io/horaires-lycee/pages/principal/index.html">
-        <h1>&lt;School-Tools&gt;</h1>
-      </a>
-    </div>
-    <div id="divIcon" style="cursor:pointer;">
-      <img src="https://school-toolsl.github.io/horaires-lycee/icons/White-icon.svg" alt="mode clair" id="icon">
+    <div id="screenSize">
+      <p id="oups">
+        Oups !
+      </p>
+      <p>
+        La largeur de votre écran est trop faible et ne peut pas supporter ce site, changez d'appareil pour accéder aux fonctionalitées du site.
+      </p>
     </div>
   </div>
-  <header>
-    <h1>Bienvenue sur mon site !</h1>
-    <h2>Y seront affichées les horaires de grille et de sonneries du lycée Jean-Monnet en temps réel ainsi que de possibles nouvelles fonctionnalitées plus tard !</h2>
-  </header>
-  <main>
-    <div id="functions">
-    <div class="container1">
-      <div class="container2">
-        <p id="txtGrille">grille :</p>
-        <div id="cercleGrille"></div>
-        <div id="grille">chargement en cours...</div>
+  <div id="screen">
+    <aside>
+      <nav>
+        <div class="horloge">
+          <h2>Heure actuelle</h2>
+          <p id="clock">--:--:--</p>
+        </div>
+        <ul>
+          <li>Qui Sommes Nous</li>
+          <li>To-Do List</li>
+          <li>Extension productivité</li>
+        </ul>
+        <p>v1.2.64</p>
+      </nav>
+    </aside>
+    <div id="downfunct"></div>
+      <div id="upbar">
+        <div id="menu" style="cursor:pointer;">
+          <img src="https://school-toolsl.github.io/horaires-lycee/icons/menu.svg" alt="mode clair" id="iconM">
+        </div>
+        <div id="title">
+          <a href="https://school-toolsl.github.io/horaires-lycee/pages/principal/index.html">
+            <h1>&lt;School-Tools&gt;</h1>
+          </a>
+        </div>
+        <div id="divIcon" style="cursor:pointer;">
+          <img src="https://school-toolsl.github.io/horaires-lycee/icons/White-icon.svg" alt="mode clair" id="icon">
+        </div>
       </div>
-      <div id="msgGrille" class="msg"></div>
+      <header>
+        <h1>Bienvenue sur mon site !</h1>
+        <h2>Y seront affichées les horaires de grille et de sonneries du lycée Jean-Monnet en temps réel ainsi que de possibles nouvelles fonctionnalitées plus tard !</h2>
+      </header>
+      <main>
+        <div id="functions">
+        <div class="container1">
+          <div class="container2">
+            <p id="txtGrille">grille :</p>
+            <div id="cercleGrille"></div>
+            <div id="grille">chargement en cours...</div>
+          </div>
+          <div id="msgGrille" class="msg"></div>
+        </div>
+        <div class="container1">
+          <div class="container2">
+            <p>autres</p>
+            <div id="cercleAutres"></div>
+            <div id="autres">chargement en cours...</div>
+          </div>
+          <div id="msgAutres" class="msg"></div>
+        </div>
+        <div id="btnToDoList">
+          <button onclick="window.location.href='https://school-toolsl.github.io/horaires-lycee/to_do_list.html'">
+            Ma To-do-list
+          </button>
+        </div>
+      </main>
+      <footer id="footer">
+        <p>
+          Les informations affichées sur ce site sont fournies à titre purement informatif et peuvent être incorrectes.
+          <br>
+          Elles ne constituent en aucun cas une source officielle du lycée.
+          <br>
+          Le créateur de ce site ne saurait être tenu responsable en cas d’erreurs, de retards, d’oubli de cours ou de tout autre désagrément résultant de l’utilisation de ces informations.
+          <br>
+          Merci de vous référer aux documents et communications officielles de l’établissement pour toute information fiable et à jour.
+        </p>
+      </footer>
     </div>
-    <div class="container1">
-      <div class="container2">
-        <p>autres</p>
-        <div id="cercleAutres"></div>
-        <div id="autres">chargement en cours...</div>
-      </div>
-      <div id="msgAutres" class="msg"></div>
-    </div>
-    </div>
-    <div id="btnToDoList">
-      <button onclick="window.location.href='https://school-toolsl.github.io/horaires-lycee/to_do_list.html'">
-        Ma To-do-list
-      </button>
-    </div>
-  </main>
-  <footer id="footer">
-    <p>
-      Les informations affichées sur ce site sont fournies à titre purement informatif et peuvent être incorrectes.
-      <br>
-      Elles ne constituent en aucun cas une source officielle du lycée.
-      <br>
-      Le créateur de ce site ne saurait être tenu responsable en cas d’erreurs, de retards, d’oubli de cours ou de tout autre désagrément résultant de l’utilisation de ces informations.
-      <br>
-      Merci de vous référer aux documents et communications officielles de l’établissement pour toute information fiable et à jour.
-    </p>
-  </footer>
+  </div>
   <script>
     function mettreAJourHoraires() {
       const maintenant = new Date();
