--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -13,7 +13,7 @@
 <body>
   <aside>
     <nav>
-      <div class="horloge">
+      <div id="horloge">
         <h2>Heure actuelle</h2>
         <p id="clock">--:--:--</p>
       </div>
@@ -22,7 +22,7 @@
         <li>To-Do List</li>
         <li>Extension productivité</li>
       </ul>
-      <p>v1.2.64</p>
+      <p>v1.2.64.1</p>
     </nav>
   </aside>
 
