--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -22,7 +22,7 @@
         <li>To-Do List</li>
         <li>Extension productivité</li>
       </ul>
-      <p>v1.2.64.2</p>
+      <p id="version">v1.2.64.2</p>
     </nav>
   </aside>
 
