--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -584,11 +584,11 @@
       if (status === "closed") {
         sidebar.style.display = "block";
         status = "open";  
-        menu.style.display = "";
+        menu.style.display = "25px 0 0 200px";
       } else {
         sidebar.style.display = "none";
         status = "closed"; 
-        menu.style.display = "";
+        menu.style.margin = "25px 0 0 200px";
       }
     }
     document.getElementById("menu").onclick = function() {
