debug js in html

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -584,7 +584,7 @@
       if (status === "closed") {
         sidebar.style.display = "block";
         status = "open";  
-        menu.style.display = "25px 0 0 200px";
+        menu.style.margin = "25px 0 0 200px";
       } else {
         sidebar.style.display = "none";
         status = "closed"; 
