--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -21,6 +21,7 @@
         <li>Qui Sommes Nous</li>
         <li>To-Do List</li>
         <li>Extension productivité</li>
+        <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle mise à jour</a></li>
       </ul>
       <p id="version">v1.2.64.2</p>
     </nav>
