--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -18,9 +18,9 @@
         <p id="clock">--:--:--</p>
       </div>
       <ul>
-        <li>Qui Sommes Nous</li>
-        <li>To-Do List</li>
-        <li>Extension productivité</li>
+        <li><a href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/index.html">Qui Sommes Nous</a></li>
+        <!--<li>To-Do List</li>
+        <li>Extension productivité</li>-->
         <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle <br>mise à jour</a></li>
       </ul>
       <p id="version">v1.2.64.2</p>
