Add sidebar navigation and current time display

--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -9,6 +9,22 @@
     <link id="themeStylesheet" rel="stylesheet" href="style.css">
   </head>
   <body>
+    <aside id="sidebar">
+      <nav>
+        <div id="horloge">
+          <h2>Heure actuelle</h2>
+          <p id="clock">--:--:--</p>
+        </div>
+        <ul>
+          <li><a href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/index.html">Qui Sommes Nous</a></li>
+          <!--<li>To-Do List</li>
+          <li>Extension productivité</li>-->
+          <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle <br>mise à jour</a></li>
+        </ul>
+        <p id="version">v1.2.64.2</p>
+      </nav>
+    </aside>
+    
     <div id="screenSize">
     <p id="oups">
       Oups !
