--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -33,6 +33,9 @@
       La largeur de votre écran est trop faible et ne peut pas supporter ce site, changez d'appareil pour accéder aux fonctionalitées du site.
     </p>
   </div>
+  <div id="menu" style="cursor:pointer;">
+      <img src="https://school-toolsl.github.io/horaires-lycee/icons/menu.svg" alt="mode clair" id="iconM">
+    </div>
     <header>
       <div id="upbar">
     <div id="menu" style="cursor:pointer;">
