--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -559,7 +559,6 @@
 
 
     let late = 1;
-
     function MettreAJourStatut{
       const maintenant = new Date();
       const jour = maintenant.getDay();
@@ -577,36 +576,74 @@
         changeCircleStatut("open")
         startCountdownStatut(8, 25, "Sonne");
       }
+      if (heure >= 17 && minute >= 31){
+        const statut = document.getElementById("statut");
+        const displayElement = document.getElementById("msgStatut");
+        statut.style.color = "green";
+        statut.innerText = "Fin de la journée";
+        changeCircleStatut("open")
+        displayElement.innerText = "Bonne soirée !";
+      }
 
       if (heure == 8 && minute == (25+late)){
         sonnerie()
       }
+
       if (heure == 9 && minute == (20+late)){
         sonnerie()
       }else if (minute == (25+late)){
         sonnerie()
       }
-      if (heure == 10 && minute == (15+late)){
+
+      if (heure == 10 && minute == (20+late)){
+        sonnerie()
+      }else if (minute == (35+late)){
+        sonnerie()
+      }else if(minute >= (20+late) && minute < (35+late)){
+        récré()
+      }
+
+      if (heure == 11 && minute == (30+late)){
         sonnerie()
       }else if (minute == (35+late)){
         sonnerie()
       }
-      if (heure == 11 && minute == (25+late)){
+
+      if (heure == 12 && minute == (30+late)){
         sonnerie()
       }else if (minute == (35+late)){
         sonnerie()
       }
-      if (heure == 12 && minute == (25+late)){
-        sonnerie()
-      }else if (minute == (35+late)){
-        sonnerie()
-      }
-      if (heure == 13 && minute == (20+late)){
+
+      if (heure == 13 && minute == (25+late)){
         sonnerie()
       }else if (minute == (30+late)){
         sonnerie()
       }
 
+      if (heure == 14 && minute == (25+late)){
+        sonnerie()
+      }else if (minute == (30+late)){
+        sonnerie()
+      }
+
+      if (heure == 15 && minute == (25+late)){
+        sonnerie()
+      }else if (minute == (35+late)){
+        sonnerie()
+      }else if(minute >= (25+late) && minute < (35+late)){
+        récré()
+      }
+
+      if (heure == 16 && minute == (30+late)){
+        sonnerie()
+      }else if (minute == (35+late)){
+        sonnerie()
+      }
+
+      if (heure == 17 && minute == (30+late)){
+        sonnerie()
+      }
 
     }
     statutWeekend(){
@@ -623,8 +660,17 @@
       const displayElement = document.getElementById("msgStatut");
       statut.style.color = "green";
       statut.innerText = "sonnerie";
-      changeCircleStatut("closed")
-      displayElement.innerText = "Weekend"
+      changeCircleStatut("open")
+      displayElement.innerText = "reprise dans"
+    }
+
+    récré(){
+      const statut = document.getElementById("statut");
+      const displayElement = document.getElementById("msgStatut");
+      statut.style.color = "green";
+      statut.innerText = "Récréation";
+      changeCircleStatut("open")
+      displayElement.innerText = "reprise dans"
     }
 
     function changeCircleStatut(status) {
