--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -559,7 +559,7 @@
 
 
     let late = 1;
-    function MettreAJourStatut{
+    function MettreAJourStatut(){
       const maintenant = new Date();
       const jour = maintenant.getDay();
       const heure = maintenant.getHours();
