--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -646,7 +646,7 @@
       }
 
     }
-    statutWeekend() {
+    function statutWeekend() {
       const statut = document.getElementById("statut");
       const displayElement = document.getElementById("msgStatut");
       statut.style.color = "red";
@@ -655,7 +655,7 @@
       displayElement.innerText = "Weekend"
     }
     
-    sonnerie() {
+    function sonnerie() {
       const statut = document.getElementById("statut");
       const displayElement = document.getElementById("msgStatut");
       statut.style.color = "green";
@@ -664,7 +664,7 @@
       displayElement.innerText = "reprise dans"
     }
 
-    récré() {
+    function récré() {
       const statut = document.getElementById("statut");
       const displayElement = document.getElementById("msgStatut");
       statut.style.color = "green";
