--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -72,7 +72,7 @@
         <div class="container1">
           <div class="container2">
             <p id="txtStatut">statut :</p>
-            <div id="cercleAutres"></div>
+            <div id="cercleStatut"></div>
             <div id="statut">chargement en cours...</div>
           </div>
           <div id="msgStatut" class="msg"></div>
