--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -858,7 +858,7 @@
     setInterval(testConnexion, 10000);
     testConnexion();
     flashFooter();
-    mettreAJourHoraires();
+    MettreAJourHoraires();
     mettreAJourStatut();
     boucleSynchro();
   </script>
