--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -97,7 +97,7 @@
     </footer>
   
   <script>
-    function mettreAJourHoraires() {
+    function MettreAJourHoraires() {
       const maintenant = new Date();
       const jour = maintenant.getDay();
       const heure = maintenant.getHours();
@@ -859,7 +859,7 @@
     testConnexion();
     flashFooter();
     MettreAJourHoraires();
-    mettreAJourStatut();
+    MettreAJourStatut();
     boucleSynchro();
   </script>
 </body>
