--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -591,53 +591,53 @@
 
       if (heure == 9 && minute == (20+late)){
         sonnerie()
-      }else if (minute == (25+late)){
+      }else if (heure == 9 && minute == (25+late)){
         sonnerie()
       }
 
       if (heure == 10 && minute == (20+late)){
         sonnerie()
-      }else if (minute == (35+late)){
+      }else if (heure == 10 && minute == (35+late)){
         sonnerie()
-      }else if(minute >= (20+late) && minute < (35+late)){
+      }else if (heure == 10 && minute >= (20+late) && minute < (35+late)){
         récré()
       }
 
       if (heure == 11 && minute == (30+late)){
         sonnerie()
-      }else if (minute == (35+late)){
+      }else if (heure == 11 && minute == (35+late)){
         sonnerie()
       }
 
       if (heure == 12 && minute == (30+late)){
         sonnerie()
-      }else if (minute == (35+late)){
+      }else if (heure == 12 && minute == (35+late)){
         sonnerie()
       }
 
       if (heure == 13 && minute == (25+late)){
         sonnerie()
-      }else if (minute == (30+late)){
+      }else if (heure == 13 && minute == (30+late)){
         sonnerie()
       }
 
       if (heure == 14 && minute == (25+late)){
         sonnerie()
-      }else if (minute == (30+late)){
+      }else if (heure == 14 && minute == (30+late)){
         sonnerie()
       }
 
       if (heure == 15 && minute == (25+late)){
         sonnerie()
-      }else if (minute == (35+late)){
+      }else if (heure == 15 && minute == (35+late)){
         sonnerie()
-      }else if(minute >= (25+late) && minute < (35+late)){
+      }else if(heure == 15 && minute >= (25+late) && minute < (35+late)){
         récré()
       }
 
       if (heure == 16 && minute == (30+late)){
         sonnerie()
-      }else if (minute == (35+late)){
+      }else if (heure == 16 && minute == (35+late)){
         sonnerie()
       }
 
