--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -16,7 +16,7 @@
           <p id="clock">--:--:--</p>
         </div>
         <ul>
-          <li><a href="https://school-toolsl.github.io/horaires-lycee/pages/QSN/index.html">Qui Sommes Nous</a></li>
+          <li><a href="https://school-toolsl.github.io/horaires-lycee/pages/principal/index.html">Accueil</a></li>
           <!--<li>To-Do List</li>
           <li>Extension productivité</li>-->
           <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle <br>mise à jour</a></li>
