--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -653,9 +653,9 @@
       const statut = document.getElementById("statut");
       const displayElement = document.getElementById("msgStatut");
       statut.style.color = "red";
-      statut.innerText = "fermé";
-      changeCircleStatut("closed")
-      displayElement.innerText = "Weekend"
+      statut.innerText = "weekend";
+      changeCircleStatut("open")
+      displayElement.innerText = "reprise lundi à 8h30"
     }
     
     function sonnerie() {
