--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -652,7 +652,7 @@
     function statutWeekend() {
       const statut = document.getElementById("statut");
       const displayElement = document.getElementById("msgStatut");
-      statut.style.color = "red";
+      statut.style.color = "green";
       statut.innerText = "weekend";
       changeCircleStatut("open")
       displayElement.innerText = "reprise lundi à 8h30"
