--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -655,7 +655,7 @@
       statut.style.color = "green";
       statut.innerText = "weekend";
       changeCircleStatut("open")
-      displayElement.innerText = "reprise lundi à 8h30"
+      displayElement.innerText = "Reprise lundi à 8h30"
     }
     
     function sonnerie() {
