maj textes html

--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -56,8 +56,15 @@
         </p>
       </div>
       <div id="text2">
+        <p class="date">03/06/2025</p>
         <p>
-          La totalité des sites du réseau school-tools ont étés conçus sur téléphone et pour téléphone mais fonctionnent parfaitement sur tout type d'appareils même si l'affichage pourrait ne pas se faire correctement sur tous les appareils.<br>Une nouvelle version optimisée pour les ordinateurs devrait sortir fin octobre.
+          La totalité des sites du réseau school-tools ont étés conçus sur téléphone et pour téléphone mais fonctionnent parfaitement sur tout type d'appareils même si l'affichage pourrait ne pas se faire correctement sur tous les appareils.<br>Une nouvelle version optimisée pour les ordinateurs devrait sortir fin novembre.
+        </p>
+      </div>
+      <div id="text3">
+        <p class="date">06/12/2025</p>
+        <p>
+          Une nouvelle version complète pour ordinateur est maintenant disponible. Nos sites s'affichent désormais parfaitement sur tout appareil d'une largeur supérieure à 240px.
         </p>
       </div>
       <div id="credits">
