--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -55,14 +55,14 @@
           School-tools est un réseau de sites codés par un élève du lycée Jean-Monnet pour les élèves du lycée Jean-Monnet regroupant un système de décompte pour l'ouverture et la fermeture du portail du lycée ainsi que les horaires des sonneries, des récrés, un outil de gestion de tâches sous forme de to-do-list dynamique et bien d'autre encore...
         </p>
       </div>
+      <p class="date" id="dateT2">03/06/2025</p>
       <div id="text2">
-        <p class="date">03/06/2025</p>
         <p>
           La totalité des sites du réseau school-tools ont étés conçus sur téléphone et pour téléphone mais fonctionnent parfaitement sur tout type d'appareils même si l'affichage pourrait ne pas se faire correctement sur tous les appareils.<br>Une nouvelle version optimisée pour les ordinateurs devrait sortir fin novembre.
         </p>
       </div>
+      <p class="date" id="dateT3">06/12/2025</p>
       <div id="text3">
-        <p class="date">06/12/2025</p>
         <p>
           Une nouvelle version complète pour ordinateur est maintenant disponible. Nos sites s'affichent désormais parfaitement sur tout appareil d'une largeur supérieure à 240px.
         </p>
