--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -82,7 +82,7 @@
             hébergement: Github Pages
           </li>
           <li>
-            Codage: CodePen, VSCode
+            Codage: CodePen, VSCode, Chrome devtools
           </li>
           <li>
             Ambiance Dev: Youtube Music
