Add download link for offline version in index.html

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -22,6 +22,8 @@
         <!--<li>To-Do List</li>
         <li>Extension productivité</li>-->
         <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle <br>mise à jour</a></li>
+        <li><a href="https://school-toolsl.github.io/horaires-lycee/horaires-lycee-version_hors_connexion.zip">Télécharger la version<br>hors connexion (.ZIP)</a></li>
+
       </ul>
       <p id="version">v1.2.64.2</p>
     </nav>
