--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -52,7 +52,7 @@
       <h1>Qui Sommes Nous ?</h1>
       <div id="text1">
         <p>
-          School-tools est un réseau de sites codés par un élève du lycée Jean-Monnet pour les élèves du lycée Jean-Monnet regroupant un système de décompte pour l'ouverture et la fermeture du portail du lycée ainsi que les horaires des sonneries, des récrés, un outil de gestion de tâches sous forme de to-do-list dynamique et bien d'autre encore...
+          School-tools est un réseau de sites open-source codés par un élève du lycée Jean-Monnet pour les élèves du lycée Jean-Monnet regroupant un système de décompte pour l'ouverture et la fermeture du portail du lycée ainsi que les horaires des sonneries, des récrés, un outil de gestion de tâches sous forme de to-do-list dynamique et bien d'autre encore...
         </p>
       </div>
       <p class="date" id="dateT2">03/06/2025</p>
